# circuit

./: .gitignore  CHANGELOG.md  README.md  circuit.cabal  stack.yaml
doc/: BP.eps  Makefile  main.tex
src/: Circuit.hs
src/Circuit/: Data.hs  Function.hs  Plot.hs  Simulate.hs  Unit.hs  Vector.hs
test/: BP.hs
